--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
 
   location /admin/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:8001/admin/;
+    proxy_pass https://backend:8001/admin/;
   }
   
   location /media/ {
@@ -19,6 +19,6 @@ server {
 
   location / {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:8001/;
+    proxy_pass https://backend:8001/;
   }
 }
